fixed navbar fixedtop gap

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,7 +26,7 @@ main {
 }
 
 main.container {
-  margin: 40px auto;
+  margin: 100px auto;
 }
 
 img {
